# PhotoOrganizer

./: MANIFEST.in  README.md  organize.py  requirements.txt  setup.cfg  setup.py
src/: organize.py
