[metadata]
name = photo_organizer
version = 0.0.1
author = Matthew Serwinowski
# author_email = author@example.com
description = Simple CLI script to batch rename image/video extension files to their timestamp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meserwinowski/PhotoOrganizer
project_urls =
    Bug Tracker = https://github.com/meserwinowski/PhotoOrganizer/issues
    EXIF Tool = https://exiftool.org/
    ConvertTo-Jpeg = https://github.com/DavidAnson/ConvertTo-Jpeg
classifiers =
    Programming Language :: Python :: 3
    # License :: OSI Approved :: MIT License
    # Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src